# asnany_article_rag_production

./: .env.example  .gitignore  LICENSE  README.md  fastapi_embedding.py  main.py  pyproject.toml  run.py  skills-lock.json
ai/chatbot/: qdrant_retriever.py  reply.py  sql_fetch.py
ai/endpoint/: admin.py  chat.py  fastapi.py
ai/prompt/: system_prompt.txt
dashboard/: index.html
dashboard/docs/: API.md  DB_SCHEMA.md  M0_FINDINGS.md  SCOPE.md  TASKS.md  UI.md
database/: admin_service.py  dashboard_logger.py  database_server.py  db.py  embedder.py  qdrant_uploader.py
database/tables/: blog.py  chat_logs.py  dashboard_logs.py  dashboard_users.py
scraper/: asnany_scraper.py
scripts/: check_duplicate_urls.py  dedupe_mysql_blog_urls.py  delete_all_users.py  generate_frontend_config.py  import_csv_to_mysql.py  migrate_001_create_dashboard_logs.py  migrate_002_create_chat_logs.py  migrate_003_create_dashboard_users.py  test_mysql.py  verify_chat_logs.py
web/: index.html
